# Laze

./: .gitignore  Cargo.toml  README.md  TESTING.md  readme.md
.github/workflows/: ci.yml  flutter-ci.yml  release-desktop.yml  release-mobile.yml  rust-ci.yml
client/src/: main.rs
controller_server/: Cargo.toml  README.md  readme.md
controller_server/src/: actions.rs  keybinds.rs  lib.rs  logger.rs  main.rs  mobile_controller.rs  server.rs
controller_server/src/server/: application.rs  client_pool.rs  command_listener.rs  command_sender.rs  commands.rs  core.rs  discovery.rs  internal_communicator.rs  mod.rs  server.rs  server_communicator.rs  tests.rs  utils.rs
design-tokens/tokens/: README.md  tokens.json
desktop_app/: README.md  next.config.js  package-lock.json  package.json  tailwind.config.cjs  tailwind.config.ts  tsconfig.json
desktop_app/.next/: BUILD_ID  app-build-manifest.json  build-manifest.json  next-server.js.nft.json  prerender-manifest.json  required-server-files.json  trace
desktop_app/app/: App.css  globals.css  home.module.css  layout.tsx  main.tsx  page.tsx
desktop_app/src-tauri/: Cargo.toml  tauri.conf.json
docs/: ICONS.md  README.md  architecture.md  developers.md  theming.md  use-cases.md
mobile_client/: README.md  pubspec.yaml
mobile_client/android/: build.gradle
mobile_client/lib/: color_constants.dart  command_btns.dart  (+6 more)
server/: Cargo.toml  build.rs  readme.md
server/src/: a.out  actions.rs  device-test.c  device.rs  ffi.rs  keybinds.rs  lib.rs  main.rs  messages.rs  mobile_controller.rs  server.rs  virtual-mouse.c
(+135 files in other folders)
