[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
local-ip-address = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
enigo = "0.3.0"
copypasta = "0.10.1"
byteorder = "1.4"
num_enum = "0.7"
log = "0.4"
env_logger = "0.11"
crossbeam-channel = "0.5"
crossbeam = "0.8"
once_cell = "1.19"

[build-dependencies]
bindgen = "0.65.1"
cc = "1.0.88"