[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
local-ip-address = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
enigo = "0.2.1"
copypasta = "0.10.1"
byteorder = "1.4"

[build-dependencies]
bindgen = "0.65.1"
cc = "1.0.88"